--- a/src/styles/common/font.css
+++ b/src/styles/common/font.css
@@ -6,3 +6,20 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* 대암 이태준 체 */
+@font-face {
+  font-family: "DAEAM_LEE_TAE_JOON";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2312-1@1.1/DAEAM_LEE_TAE_JOON.woff2")
+    format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+/* Warhaven */
+@font-face {
+  font-family: "WarhavenB";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2312-1@1.1/WarhavenB.woff2")
+    format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
