--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,10 @@ img {
   border: 0;
 }
 html {
-  font-size: 10px;
+  font-size: 14px;
 }
 body {
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: "Pretendard-Regular", sans-serif;
   font-size: 1rem;
   line-height: 1.25;
   letter-spacing: -0.23px;
