--- a/src/pages/login/LoginPage.css
+++ b/src/pages/login/LoginPage.css
@@ -7,6 +7,7 @@
   display: block;
 }
 .LoginPage-main {
+  font-family: "DAEAM_LEE_TAE_JOON";
   position: relative;
   display: flex;
   flex-direction: column;
