--- a/src/pages/join/JaddPage.css
+++ b/src/pages/join/JaddPage.css
@@ -4,12 +4,19 @@
 }
 .JoinPage-main {
   position: relative;
-  display: block;
+  display: flex;
+  font-size: 19px;
+  flex-direction: column;
+  flex-wrap: wrap; /* 아이템을 여러 줄에 걸쳐 배치 */
+  justify-content: center; /* 가로 방향 중앙 정렬 */
+  align-items: center;
   padding-top: 140px;
 }
 .JoinPage-img {
   position: relative;
-
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
   background-color: green;
   width: 280px;
   height: 280px;
@@ -25,6 +32,7 @@
 .JoinPage-info {
   position: relative;
   display: flex;
+  padding-top: 121px;
   padding-bottom: 180px;
   display: block;
   border: none;
@@ -32,17 +40,20 @@
 }
 .Join-mail {
   position: relative;
+  padding: 20px 0 19px 0;
   width: 100%;
   border: none;
   border-bottom: 1px solid #000000;
 }
 .Join-name {
   position: relative;
+  padding: 20px 0 19px 0;
   width: 100%;
   border: none;
   border-bottom: 1px solid #000000;
 }
 .Join-pw {
+  padding: 20px 0 19px 0;
   position: relative;
   border: none;
   width: 100%;
@@ -50,56 +61,97 @@
 }
 .Join-morepw {
   position: relative;
+  padding: 20px 0 19px 0;
   border: none;
   width: 100%;
   border-bottom: 1px solid #000000;
 }
 .Join-gender {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0 19px 0;
   width: 100%;
   border: none;
   background-color: #ffffff;
   border-bottom: 1px solid #000000;
 }
+.gender-bt-wrap {
+  position: relative;
+  display: flex;
+  font-family: "DAEAM_LEE_TAE_JOON";
+  font-size: 14px;
+  right: 0;
+}
+.gender-bt-man {
+  color: #d60117;
+  margin-right: 10px;
+}
+.gender-bt-woman {
+  color: #d60117;
+}
+.Join-nickname-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.nickname-inner {
+  display: flex;
+  align-items: center;
+  position: relative;
+  border-bottom: 1px solid #000000;
+}
 .Join-nickname {
   position: relative;
+  padding: 20px 0 19px 0;
   border: none;
   width: 100%;
-  border-bottom: 1px solid #000000;
+}
+.nickname-bt {
+  position: absolute;
+  font-family: "DAEAM_LEE_TAE_JOON";
+  font-size: 14px;
+  color: #d60117;
+  width: 84px;
+  height: 38px;
+  right: 0;
+  /* bottom: 50%; 선 중앙에 위치하도록 조절 */
+  /* transform: translateY(50%); */
 }
 .Join-phonenumber {
   position: relative;
+  padding: 20px 0 19px 0;
   border: none;
   width: 100%;
   border-bottom: 1px solid #000000;
 }
 .Join-address {
   position: relative;
+  padding: 20px 0 19px 0;
   border: none;
   width: 100%;
   border-bottom: 1px solid #000000;
 }
 .Join-buttons {
+  font-family: "DAEAM_LEE_TAE_JOON";
   position: relative;
-  padding-top: 97px;
   display: block;
-  gap: 20px;
+  padding-top: 97px;
 }
 .Join-button {
   width: 100%;
   height: 55px;
   color: #d60117;
   font-size: 19px;
+  margin-bottom: 20px;
 }
 .cancel-button {
   position: relative;
-
   border: 1px solid #066e52;
-  font-size: 19px;
   border-radius: 10px;
   color: #ffffff;
   background-color: #066e52;
   width: 500px;
   height: 55px;
-  padding: 10px 20px;
 }
