--- a/src/pages/admin/styles.css
+++ b/src/pages/admin/styles.css
@@ -1,21 +1,21 @@
-.swiper {
+/* .swiper {
   width: 300px;
   height: 300px;
   margin-left: auto;
   margin-right: auto;
-}
+} */
 
 .swiper-slide {
   background-size: cover;
   background-position: center;
 }
 
-.mySwiper2 {
+.rvcard-swiper {
   height: 80%;
   width: 300px;
 }
 
-.mySwiper {
+.rv-sub-swiper {
   height: 20%;
   width: 300px;
   box-sizing: border-box;
@@ -23,17 +23,17 @@
   /* width: 100%; */
 }
 
-.mySwiper .swiper-slide {
+.rv-sub-swiper .swiper-slide {
   width: 25%;
   height: 100%;
   opacity: 0.4;
 }
 
-.mySwiper .swiper-slide-thumb-active {
+.rv-sub-swiper .swiper-slide-thumb-active {
   opacity: 1;
 }
 
-.swiper-slide img {
+.rvcard-swiper-slide img {
   border-radius: 10px;
 
   display: block;
@@ -41,7 +41,7 @@
   height: 180px;
   object-fit: cover;
 }
-.mySwiper img {
+.rv-sub-swiper img {
   border-radius: 5px;
   width: 50px;
   height: 50px;
