--- a/src/pages/admin/styles/swiper.css
+++ b/src/pages/admin/styles/swiper.css
@@ -1,5 +1,5 @@
 .swiper {
-  width: 300px;
+  /* width: 3px; */
   height: 300px;
   margin-left: auto;
   margin-right: auto;
@@ -12,12 +12,12 @@
 
 .mySwiper2 {
   height: 80%;
-  width: 300px;
+  width: 306px;
 }
 
 .mySwiper {
   height: 20%;
-  width: 300px;
+  width: 306px;
   box-sizing: border-box;
   padding: 10px 0;
   /* width: 100%; */
